2008-05-14  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-coding.el (make-8-bit-choose-category):=20
	Control-1 characters extend from #x80 to #x9F (inclusive),
	not from #x80 to #xBF.

2008-05-13  Aidan Kehoe  <kehoea@parhasard.net>

	* printer.el (generic-print-region): 
	(generic-print-buffer): 
	Use #'valid-device-type-p instead of #'valid-specifier-tag-p to
	check if the msprinter device is available, now that msprinter is
	always available as a specifier tag. 

2008-05-11  Aidan Kehoe  <kehoea@parhasard.net>

	* disp-table.el (make-display-table): 
	Update the example code to make it more general, and more
	compatible with GNU. Also, I previously said #xFF when I meant
	?\xFF; correct this.
	* mule/cyril-util.el (standard-display-cyrillic-translit): 
	Make the selection of the default language more sensible; change
	the API a little to make a sensible default Cyrillic language
	available, checking current-language-environment. 

2007-07-21  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/cyril-util.el:
	* mule/cyril-util.el (cyrillic-encode-koi8-r-char): Removed.
	* mule/cyril-util.el (cyrillic-encode-alternativnyj-char):
	Removed.  No-one uses these functions in google.com/codesearch,
	GNU have a comment doubting their utility, and their
	implementation is trivial. 
	* mule/cyril-util.el (cyrillic-language-alist):
	Reformatted.
	* mule/cyril-util.el (standard-display-table)): Removed. It wasn't
	used anyway. 
	* mule/cyril-util.el (standard-display-cyrillic-translit):
	Rewrite it to work with character tables as display tables, and
	not to abort with an error.

2007-07-21  Aidan Kehoe  <kehoea@parhasard.net>

	* disp-table.el:
	* disp-table.el (make-display-table): Moved earlier in the file in
	a weak attempt at making syncing with GNU easier. 
	* disp-table.el (frob-display-table):
	Autoload it, accept TAG-SET, for editing specifiers.
	* disp-table.el (describe-display-table):
	Have it handle character sets. 	
	* disp-table.el (standard-display-8bit-1):