@@ -1,3 +1,8 @@
+2008-02-25  bpalmer  <bpalmer@gmail.com>
+
+	* subr.el(add-to-list): add support for `compare-fn' to sync with
+	emacs.
+
 2008-05-14  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* mule/mule-coding.el (make-8-bit-choose-category):=20
